k8/nohate-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nohate-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nohate-api
    spec:
      containers:
        - name: nohate-api
          image: registry.datexis.com/bvanaken/nohate-api:v1.3
          command:
            - /bin/sh
            - "-c"
            - "/app/app.py /models_dir"
          imagePullPolicy: Always
          ports:
            - name: client-port
              containerPort: 1337
          resources:
            requests:
              memory: 12Gi
              cpu: 1
            limits:
              memory: 16Gi
          volumeMounts:
            - name: nohate-models-pvc
              mountPath: /models_dir
      imagePullSecrets:
        - name:  private-registry-auth
      volumes:
        - name: nohate-models-pvc
          persistentVolumeClaim:
            claimName: nohate-models-pvc
