k8/nohate-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nohate-api
spec:
  type: NodePort
  ports:
    - port: 1337
      name: client-port
      targetPort: 1337
  selector:
    app: nohate-api
