k8/nohate-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nohate-demo
  labels:
    app: nohate-demo
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt
spec:
  tls:
  - secretName: "nohate-demo-subdomain-tls"
    hosts:
    - "nohate.demo.datexis.com"
  rules:
  - host: "nohate.demo.datexis.com"
    http:
      paths:
      - path: "/"
        backend:
          serviceName: nohate-api-service
          servicePort: 1337
